# nupic.cpp

./: .travis.yml  API_CHANGELOG.md  CMakeLists.txt  CommonCompilerConfig.cmake  Dockerfile  NupicCoreTests.cmake  README.md  appveyor.yml  grid_cell_demo.py  requirements.txt  setup.py  startupCodeBlocks.sh
.github/workflows/: build.yml
bindings/py/cpp_src/: CMakeLists.txt
bindings/py/cpp_src/plugin/: PyBindRegion.cpp  PyBindRegion.hpp  RegisteredRegionImplPy.hpp
bindings/py/src/: CMakeLists.txt
bindings/py/tests/: network_test.py
htm/src/: CMakeLists.txt
htm/src/examples/: HelloSPTP.cpp
htm/src/nupic/algorithms/: BacktrackingTMCpp.cpp  BacktrackingTMCpp.hpp  Cells4.cpp  Connections.hpp  SpatialPooler.hpp
htm/src/nupic/types/: Sdr.hpp  Serializable.hpp  Types.hpp
htm/src/nupic/utils/: Timer.cpp
htm/src/test/: CMakeLists.txt
htm/src/test/algorithms/: ConnectionsPerformanceTest.cpp  SpatialPoolerTest.cpp
htm/src/test/math/: SparseBinaryMatrixTest.cpp  SparseMatrixTest.cpp
htm/src/test/types/: SdrTest.cpp
htm/src/test/utils/: RandomTest.cpp  TimerTest.cpp
netapi/src/: CMakeLists.txt
netapi/src/nupic/engine/: Input.cpp  Input.hpp  Link.cpp  Network.cpp  Output.cpp  Region.cpp  Region.hpp  RegionImpl.cpp  RegionParameters.cpp  Watcher.cpp
netapi/src/nupic/ntypes/: Array.hpp  BasicType.cpp  Scalar.hpp  ptr_types.hpp
netapi/src/nupic/regions/: VectorFileSensor.hpp
netapi/src/test/: CMakeLists.txt
py/: requirements.txt  setup.py
py/htm/advanced/regions/: ColumnPoolerRegion.py
py/src/nupic/algorithms/: __init__.py  backtracking_tm.py  backtracking_tm_cpp.py  connections.py  knn_classifier.py  sdr_classifier.py  spatial_pooler.py  temporal_memory.py
py/src/nupic/encoders/: __init__.py  adaptive_scalar.py  category.py  coordinate.py  date.py  logarithm.py  multi.py  pass_through.py  random_distributed_scalar.py  scalar.py  sdr_category.py
py/src/nupic/engine/: __init__.py
py/tests/networkapi/: sinewave_test.py
src/: CMakeLists.txt  CombineUnixArchives.cmake  NupicLibraryUtils.cmake
src/examples/: HelloSPTP.cpp
src/examples/algorithms/: HelloSP_TP.cpp
src/examples/hello/: HelloSPTP.cpp
src/examples/hotgym/: HelloSPTP.cpp
src/examples/mnist/: MNIST_SP.cpp
src/examples/regions/: HelloRegions.cpp
src/htm/algorithms/: Connections.cpp  Connections.hpp  SDRClassifier.cpp  SpatialPooler.cpp  TemporalMemory.cpp
src/htm/engine/: RegionImpl.cpp  RegionImpl.hpp  RegionImplFactory.hpp
src/htm/ntypes/: Value-RapidYaml.cpp  Value-libyaml.cpp  Value-yamlcpp.cpp  Value.cpp  Value.hpp
src/htm/os/: OS.hpp  OSUnix.cpp  OSWin.cpp
src/htm/regions/: ClassifierRegion.cpp  SPRegion.cpp  ScalarSensor.cpp  TMRegion.cpp  TMRegion.hpp  TestNode.cpp  VectorFileEffector.cpp  VectorFileSensor.cpp  VectorFileSensor.hpp
src/nupic/algorithms/: Anomaly.cpp  Anomaly.hpp  AnomalyLikelihood.cpp  AnomalyLikelihood.hpp  BacktrackingTMCpp.cpp  BacktrackingTMCpp.hpp  BitHistory.hpp  Cell.cpp  Cell.hpp  Cells4.cpp  Cells4.hpp  ColumnPooler.cpp  Connections.cpp  Connections.hpp  GaborNode.cpp  InSynapse.hpp  SDRClassifier.cpp  SDRClassifier.hpp  Segment.cpp  Segment.hpp  SegmentUpdate.cpp  SegmentUpdate.hpp  SpatialPooler.cpp  SpatialPooler.hpp  Svm.cpp  Svm.hpp  SvmT.hpp  TemporalMemory.cpp  TemporalMemory.hpp
src/nupic/bindings/: math.i
src/nupic/encoders/: AdaptiveScalarEncoder.hpp  BaseEncoder.hpp  CategoryEncoder.hpp  CoordinateEncoder.hpp  DateEncoder.hpp  DecodeResult.hpp  Encoder.hpp  GeospatialCoordinateEncoder.hpp  MultiEncoder.hpp  PassThroughEncoder.hpp  RandomDistributedScalarEncoder.hpp  RangeList.hpp  SDRCategoryEncoder.hpp  ScalarEncoder2.hpp  ScalarSensor.cpp  ScalarSensor.hpp  SparsePassThroughEncoder.hpp  Utils.hpp  md5.hpp
src/nupic/engine/: Collections.cpp  Input.cpp  Input.hpp  Link.cpp  Link.hpp  Network.cpp  Network.hpp  NuPIC.cpp  Output.cpp  Output.hpp  Region.cpp  Region.hpp  RegionImpl.cpp  RegionImpl.hpp  RegionImplFactory.cpp  RegionImplFactory.hpp  RegionIo.cpp  RegionParameters.cpp  RegisteredRegionImpl.hpp  Spec.cpp  Spec.hpp  TestNode.cpp  TestNode.hpp  UniformLinkPolicy.cpp  UniformLinkPolicy.hpp  YAMLUtils.cpp  YAMLUtils.hpp
src/nupic/math/: Array2D.hpp  ArrayAlgo - Copy.hpp  ArrayAlgo.hpp  ArrayAlgoMods.hpp  Functions.hpp  GraphAlgorithms.hpp  Math.hpp  SegmentMatrixAdapter.hpp  SparseBinaryMatrix.hpp  SparseMatrix.hpp  StlIo.hpp  Topology.cpp  Utils.hpp
src/nupic/networkapi/: Array.hpp  ArrayBase.cpp  ArrayBase.hpp  BasicType.cpp  Input.cpp  Input.hpp  Link.cpp  Link.hpp  Network.cpp  Network.hpp  NuPIC.cpp  Output.cpp  Output.hpp  Region.cpp  Region.hpp  RegionImpl.cpp  RegionImpl.hpp  RegionImplFactory.cpp  RegisteredRegionImplCpp.hpp  Scalar.cpp  Spec.cpp  Spec.hpp  Value.cpp  Value.hpp  Watcher.cpp  Watcher.hpp  YAMLUtils.cpp  YAMLUtils.hpp
src/nupic/ntypes/: Array.hpp  ArrayBase.cpp  ArrayBase.hpp  ArrayRef.hpp  Buffer.cpp  Buffer.hpp  BundleIO.cpp  BundleIO.hpp  Collection.cpp  Collection.hpp  Dimensions.hpp  MemParser.cpp  ObjectModel.h  ObjectModel.hpp  Scalar.cpp  Scalar.hpp  Sdr.hpp  Value.cpp  Value.hpp
src/nupic/os/: Directory.cpp  Directory.hpp  Env.cpp  Env.hpp  FStream.cpp  FStream.cppx  FStream.hppx  OS.cpp  OS.hpp  OSUnix.cpp  OSWin.cpp  Path.cpp  Path.hpp  Regex.hpp  Timer.cpp  Timer.hpp
src/nupic/py_support/: NumpyVector.hpp
src/nupic/regions/: PyRegion.cpp  PyRegion.hpp  SPRegion.cpp  SPRegion.hpp  ScalarSensor.cpp  ScalarSensor.hpp  TMRegion.cpp  TMRegion.hpp  TestNode.cpp  TestNode.hpp  VectorFile.cpp  VectorFile.hpp  VectorFileEffector.cpp  VectorFileEffector.hpp  VectorFileSensor.cpp  VectorFileSensor.hpp
src/nupic/types/: BasicType.cpp  BasicType.hpp  Sdr.cpp  Sdr.hpp  Serializable.hpp  Types.h  Types.hpp
src/nupic/utils/: CSVReader.cpp  CSVReader.hpp  Log.hpp  LogItem.cpp  MovingAverage.cpp  MovingAverage.hpp  Random.cpp  Random.hpp  SdrMetrics.cpp  SdrMetrics.hpp  StlIo.hpp  StringUtils.cpp  StringUtils.hpp  Time.cpp  Time.hpp  Watcher.cpp  Watcher.hpp
src/test/: CMakeLists.txt
src/test/integration/: ConnectionsPerformanceTest.cpp  CppRegionTest.cpp
(+112 files in other folders)
